<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    >



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".MainActivity">

    <android.widget.Button
        android:id="@+id/dh_btn"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/outlinebtn"
        android:text="@string/diffie_hellman"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/css_algorithms"
        android:textColor="@android:color/holo_purple"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/rsa_btn"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/outlinebtn"
        android:text="@string/rsa"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dh_btn" />

    <android.widget.Button
        android:id="@+id/rc4_btn"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/outlinebtn"
        android:text="@string/rc4"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsa_btn" />

    <android.widget.Button
        android:id="@+id/Vigener_btn"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/outlinebtn"
        android:text="@string/vigenere"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rc4_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>